Adds cblas for lapacke cmake finder

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
 addons:
   apt:
     packages:
+      - libatlas-dev
       - libeigen3-dev
       - libmumps-dev
       - libhypre-dev
