--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,15 +50,6 @@ if(TRUE)
     add_test(test_hypre ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${PROCS} ${MPIEXEC_PREFLAGS} test_hypre_exe ${MPIEXEC_POSTFLAGS})
   endif()
 
-  #Lapack(e)
-  find_package(LAPACKE REQUIRED)
-  if(${LAPACKE_FOUND})
-    include_directories(${LAPACKE_INCLUDE_DIRS})
-    add_executable(test_lapack_exe ${TEST_DIR}/lapack_example.c )
-    target_link_libraries( test_lapack_exe ${LAPACKE_LIBRARIES})
-    add_test(test_lapack test_lapack_exe)
-  endif()
-
   #MMGs (would work the same way for the different "colors" of mmg3d, mmg2d, mmg...)
   find_package(Mmgs REQUIRED)
   if(${MMGS_FOUND})
@@ -88,9 +79,16 @@ if(TRUE)
     add_test(test_lis ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${PROCS} ${MPIEXEC_PREFLAGS} test_lis_exe ${MPIEXEC_POSTFLAGS} 200 200 100)
   endif()
 
-  if(FALSE)
-    find_package(MKL)
-    find_package (PETSc REQUIRED)
+  #Lapack(e) , still have to fix the cblas trouble
+  find_package(LAPACKE)
+  if(${LAPACKE_FOUND})
+    include_directories(${LAPACKE_INCLUDE_DIRS})
+    add_executable(test_lapack_exe ${TEST_DIR}/lapack_example.c )
+    target_link_libraries( test_lapack_exe ${LAPACKE_LIBRARIES})
+    add_test(test_lapack test_lapack_exe)
   endif()
+  find_package(MKL)
+  #find_package (PETSc)
+
 
 endif()
