--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: c++
 compiler:
   - gcc
-  - clang
+  #- clang
 os:
   - linux
-  - osx
+  #- osx
 before_install:
   #mmg
   - git clone https://github.com/MmgTools/mmg.git
@@ -25,10 +25,23 @@ before_install:
   - make
   - sudo make install
   - cd ..
-
+  #Petsc
+  - git clone -b maint https://bitbucket.org/petsc/petsc petsc
+  - cd petsc
+  - export PETSC_DIR=pwd
+  - export PETSC_ARCH=arch-linux2-c-debug
+  - ./configure
+  - make PETSC_DIR=$PETSC_DIR PETSC_ARCH=$PETSC_ARCH all
+  - make PETSC_DIR=$PETSC_DIR PETSC_ARCH=$PETSC_ARCH test
+  #- make PETSC_DIR=/home/norgeot/dev/ext/petsc PETSC_ARCH=arch-linux2-c-debug streams
+  - echo $TRAVIS_BUILD_DIR
+  - cd ..
 addons:
   apt:
     packages:
+      - libmpich-dev
+      - libmetis-dev
+      - libparmetis-dev
       - libatlas-dev
       - libeigen3-dev
       - libmumps-dev
@@ -38,7 +51,7 @@ addons:
 script:
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DPETSC_DIR=$PETSC_DIR -DPETSC_ARCH=$PETSC_ARCH
   - make
   - ctest
 notifications:
