--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ before_install:
   #Petsc
   - git clone -b maint https://bitbucket.org/petsc/petsc petsc
   - cd petsc
-  - export PETSC_DIR=pwd
-  - export PETSC_ARCH=arch-linux2-c-debug
+  - PETSC_DIR=`pwd`; export PETSC_DIR
+  - PETSC_ARCH=arch-linux2-c-debug; export PETSC_ARCH
   - ./configure
   - make PETSC_DIR=$PETSC_DIR PETSC_ARCH=$PETSC_ARCH all
   - make PETSC_DIR=$PETSC_DIR PETSC_ARCH=$PETSC_ARCH test
